<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:textSize="20sp"
        android:fontFamily="casual"/>

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nombre"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/apellido"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etCalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/calle"
            android:inputType="textPersonName"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/numero"
            android:inputType="number"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <Switch
        android:id="@+id/swHabilitar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deshabilitar_habilitar_boton"
        android:checked="false"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:text="@string/cambiar_titulo"
            tools:ignore="ButtonStyle"
            android:layout_marginRight="4dp" />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/siguiente"
            android:enabled="false"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>